# agent-labbook

./: .gitignore  .mcp.json  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  tsconfig.json  wrangler.toml
.codex-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml
assets/: agent-labbook.pxd
assets/App.icon/: icon.json
docs/: self-host.md  versioning.md
scripts/: build_worker_ui.mjs  mcp-runtime-requirements.txt  run_labbook.py  run_mcp_server.py
skills/labbook/: SKILL.md
src/agent_labbook/: notion_api.py  service.py  state.py
src/labbook/: __init__.py  cli.py  local_handoff.py  mcp_server.py  service.py  state.py
tests/: test_cli.py  test_mcp_server.py  test_service.py  test_state.py
tests/e2e/: oauth-selection.spec.js
tests/e2e/support/: worker-test-server.mjs
worker/src/: index.js
worker/ui/: selection-app.tsx  styles.css
worker/ui/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx
