[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-labbook"
version = "0.13.11"
description = "Notion auth and project binding for Codex, Claude Code, and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Binbin Shen", email = "binbinsh@gmail.com" }
]
keywords = ["codex", "claude-code", "mcp", "notion", "oauth"]
dependencies = [
  "mcp>=1.26.0,<2",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/binbinsh/agent-labbook"
Repository = "https://github.com/binbinsh/agent-labbook"

[project.scripts]
agent-labbook = "labbook.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
